# Sunhacks_25

./: README.md
NewSunhack/: pyproject.toml
NewSunhack/NewSunhack/: README.md  pyproject.toml
NewSunhack/NewSunhack/app/: llms.py  runnables.py  tools.py
NewSunhack/app/: runnables.py  server.py
Testing_Folder/: something.py  testsc.py
backend/: main.py
